fix overflow on map

--- a/frontend/src/pages/stylesheets/map.css
+++ b/frontend/src/pages/stylesheets/map.css
@@ -1,4 +1,4 @@
 .mapContainer {
-    height: 100vh;
+    height: 94vh;
     width: 100vw;
 }
